# mini-LM

./: .env.example  .gitignore  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml
configs/: data.yaml  model_100m.yaml  model_200m.yaml  model_20m.yaml  model_50m.yaml  smoke.yaml  tokenizer.yaml  train.yaml
data/: sample.txt
infra/minio/: Dockerfile
src/app/: cli.py
src/common/: __init__.py  errors.py  hashing.py  logging.py  paths.py  progress.py
src/data_ingestion/: __init__.py  adapters.py  clean.py  cli.py  config.py  dedup.py  disk.py  download.py  ingestion.py  manifest.py  manifest_json.py  metadata.py  orchestrator.py  reconciliation.py  retry.py  sharding.py  split.py  stats.py  storage.py
src/evaluation/: __init__.py  generation.py  perplexity.py
src/model/: __init__.py  config.py  gpt.py
src/serving/: __init__.py  api.py  schemas.py
src/tokenization/: __init__.py  encode.py  train_tokenizer.py
src/training/: __init__.py  checkpoint.py  cli.py  dataset.py  pack.py  scheduler.py  trainer.py
tests/integration/: test_ingestion_pipeline.py  test_training_smoke.py
tests/unit/: test_adapters.py  test_checkpoint.py  test_clean.py  test_config.py  test_evaluation.py  test_hashing.py  test_ingestion.py  test_manifest.py  test_manifest_json.py  test_metadata.py  test_model.py  test_pack.py  test_reconciliation.py  test_sharding.py  test_tokenizer.py  test_trainer.py
