[project]
# Distribution metadata; source packages are discovered from src/ below.
name = "local-llm"
version = "0.1.0"
description = "A local, reproducible decoder-only language-model pretraining platform."
requires-python = ">=3.11"
# YAML is shared by ingestion and the training smoke command.
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
ingest = ["datasets>=3.0", "duckdb>=1.0", "minio>=7.2", "tqdm>=4.66"]
train = ["numpy>=1.26", "tokenizers>=0.20", "torch>=2.2"]

[project.scripts]
data-ingest = "data_ingestion.cli:main"
train = "training.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.5", "mypy>=1.10"]

[tool.setuptools.packages.find]
# Top-level packages are intentionally independent modules under src/.
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
# Formatting and linting are kept in one tool so CI and editor actions agree.
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
